@@ -3,6 +3,9 @@ Changelog
 
 5.6-dev - (unreleased)
 ----------------------
+* Change: tags are now added and removed on the textarea to reflect the changes
+  that can occour when using the jQuery token
+  [ichimdav refs #20302]
 
 5.5 - (2014-01-21)
 ------------------
